Sudoku Spacing Fixes

--- a/extras/Sudoku/sudoku.css
+++ b/extras/Sudoku/sudoku.css
@@ -18,11 +18,6 @@
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 }
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #F5FCFF;
-}
-
 .sudokucontainer {
     display: flex;
     flex-direction: column;
@@ -44,7 +39,7 @@ body {
 }
 
 .cell:hover {
-    background: rgb(214, 233, 240);
+    background: lightblue;
 }
 
 .cell:focus {
@@ -53,18 +48,6 @@ body {
 
 .cell:nth-child(3n):not(:nth-child(9n)) {
     margin-right: 3px;
-}
-
-.cell:nth-child(27n + 28),
-.cell:nth-child(27n + 29),
-.cell:nth-child(27n + 30),
-.cell:nth-child(27n + 31),
-.cell:nth-child(27n + 32),
-.cell:nth-child(27n + 33),
-.cell:nth-child(27n + 34),
-.cell:nth-child(27n + 35),
-.cell:nth-child(27n + 36) {
-  padding:  3px;
 }
 
 .background_one {
